# fastbots

./: .dockerignore  .env  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  cookies.pkl  entrypoint.sh  firefox_preferences.json  index.html  locators.ini  main.py  mkdocs.yml  objects.inv  preferences.json  pyproject.toml  settings.ini  sitemap.xml
docs/: index.md
docs/reference/: bot.md  chrome_bot.md  config.md  firefox_bot.md  llm_extractor.md  page.md  payload.md  task.md
fastbot/: __init__.py  bot.py  config.py  logger.py  page.py  task.py
fastbots/: __init__.py  bot.py  chrome_bot.py  config.py  exceptions.py  firefox_bot.py  llm_extractor.py  logger.py  page.py  payload.py  task.py
reference/bot/: index.html
reference/chrome_bot/: index.html
reference/config/: index.html
reference/firefox_bot/: index.html
reference/llm_extractor/: index.html
reference/page/: index.html
reference/payload/: index.html
reference/task/: index.html
site/: objects.inv
tests/: bot.py  test_bot.py  test_chrome_bot.py  test_firefox_bot.py  test_page.py
