[tool.poetry]
name = "fastbot"
version = "0.1.0"
description = "A simple library for bot development using selenium and the POM (Page Object Model) design."
authors = ["Uberti Davide <24529587+ubertidavide@users.noreply.github.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.15.2"
python-decouple = "^3.8"
tenacity = "^8.2.3"
selenium-wire = "^5.1.0"
setuptools = "^68.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
