[tool.poetry]
name = "fastbots"
version = "0.2.6"
description = "A simple library designed for rapid bot and scraper development using Selenium and the POM (Page Object Model) design."
authors = ["Uberti Davide <24529587+ubertidavide@users.noreply.github.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.15.2"
python-decouple = "^3.8"
tenacity = "^8.2.3"
selenium-wire = "^5.1.0"
capsolver = "^1.0.7"

[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
